fixed big gap between picture and text on long screens

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -133,7 +133,7 @@ h2.ab-lef-box-header {
 /* change a bit main styling */
 main {
   /* to have a space between the header and this box */
-  padding: 60px 20px 0 20px;
+  padding: 60px 20px 30px 20px;
   margin: 100px auto 50px;
   /*font-family: 'Bitter', serif;*/
   /*font-family: 'Catamaran', serif;*/
